Fix padding causing overflows

--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     background-color: #f5f5f5;
@@ -120,7 +124,7 @@ p {
 
 @media (width <= 400px) {
     header {
-        height: 55px;
+        height: 87px;
     }
 
     #title {
@@ -142,7 +146,7 @@ p {
 
 @media (width > 400px) {
     header {
-        height: 30px;
+        height: 62px;
     }
 
     #title {
